Fixed some layout problems
Seems like it's not possible to have multiple modules with same file
name for the stylesheet. It will not be loaded.
Fixed alignment problem with symbol and temperature

--- a/mmm-yrnow.css
+++ b/mmm-yrnow.css
@@ -1,45 +1,48 @@
-.precipText {
+.MMM-YrNow {
+    display: inline-block;
+}
+
+.MMM-YrNow .precipText {
     margin: 0px;
     white-space: nowrap;
 }
 
-.animation {
+.MMM-YrNow .animation {
     vertical-align: middle;
 }
 
-img.umbrella {
+.MMM-YrNow img.umbrella {
     width: 90px;
     margin-bottom: 10px;
 }
 
-.forecast {
-    display: inline-block;
-    width: 150px;
-}
-
-.forecast img, .forecast span {
+.MMM-YrNow img, .MMM-YrNow span {
     position: relative;
     display: inline-block;
     padding-right: 20px;
     vertical-align: middle;
 }
 
-img.weatherSymbol {
+.MMM-YrNow img.weatherSymbol {
     width: 150px;
 }
 
-.temperature {
+.MMM-YrNow .forecast {
+    display: inline-block;
+}
+
+.MMM-YrNow .temperature {
     display: inline-block;
     vertical-align: middle;
 }
 
-#rain {
+.MMM-YrNow #rain {
   height: 70px;
-  width: 74px;
+  width: 90px;
   margin-bottom: -20px;
 }
 
-#rain--1, #rain--2, #rain--3 {
+.MMM-YrNow #rain--1, .MMM-YrNow #rain--2, .MMM-YrNow #rain--3 {
   fill: #00B9F1;
   -webkit-transition: opacity 600ms cubic-bezier(0.645, 0.045, 0.355, 1);
 }
